--- a/WEB_UI/W3/P1_4.html
+++ b/WEB_UI/W3/P1_4.html
@@ -1,20 +1,51 @@
 <!-- 
 Створити горизонтальне меню, яке реагує на наведення курсору. Колір тексту повинен змінюватись на червоний (red), а також повинно з'являтися підкреслення тексту.
 -->
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html><html><head><meta charset="UTF-8" /><title>Вивчаємо CSS</title>
+    <style>
+        body{
+            padding: 30px;
+            color: white;
+        }
+        nav {
+            background: -webkit-linear-gradient(red, blue); /* For Safari 5.1 to 6.0 */
+            background: -o-linear-gradient(red, blue); /* For Opera 11.1 to 12.0 */
+            background: -moz-linear-gradient(red, blue); /* For Firefox 3.6 to 15 */
+            background: linear-gradient(red, blue); /* Standard syntax (must be last) */
+            display: inline-block;
+        }
+        ul, li{
+            margin: 0;
+            padding: 0;
+        }
+        li {
+            list-style-type: none;
+            padding: 10px;
+            border: 1px solid white;
+            display: inline-block;
+        }
+        a {
+            color: white;
+            text-decoration: none;
+        }
 
-<head>
-    <meta charset="UTF-8" />
-    <title>Вивчаємо HTML</title>
+        li:hover a {
+            color: red;
+            text-decoration: underline;
+            /* додайте стилі тут */
+        }
+    </style>
 </head>
 
 <body>
-    <ul>
-        <li>Текст</li>
-        <li>Текст</li>
-        <li>Текст</li>
-    </ul>
+    <nav>
+        <ul>
+            <li><a href="#">Текст</a></li>
+            <li><a href="#">Текст</a></li>
+            <li><a href="#">Текст</a></li>
+            <li><a href="#">Текст</a></li>
+            <li><a href="#">Текст</a></li>
+        </ul>
+    </nav>
 </body>
-
 </html>
