--- a/WEB_UI/W3/P1_5.html
+++ b/WEB_UI/W3/P1_5.html
@@ -3,31 +3,21 @@
 Відповідь ховається в задачі про меню. Параметр float: left або float: right не використовувати.
 -->
 
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="UTF-8" />
-    <title>Вивчаємо CSS</title>
+<!DOCTYPE html><html><head><meta charset="UTF-8" /><title>Вивчаємо CSS</title>
     <style>
-        div {
-            border: 2px dashed blue;
-            background-color: yellow;
-            height: 100px;
-            box-sizing: border-box;
-            width: 20%;
-            display: inline-block;
-            /* додайте стилі тут */
-        }
+    div {
+        border: 2px dashed blue;
+        background-color: yellow;
+        height: 100px;
+        box-sizing: border-box;
+        width: 20%;
+        display: inline-block;
+        /* додайте стилі тут */
+    }
     </style>
 </head>
 
 <body>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <div></div><div></div><div></div><div></div><div></div>
 </body>
-
 </html>
